<resources>
    <string name="app_name">Auction House</string>
    <string name="menu_salir">Exit</string>
    <string name="menu_ajustes">Settings</string>
    <string name="nombre">Name</string>
    <string name="vendedor">Seller</string>
    <string name="precio">Price</string>
    <string name="menu_registro">Register</string>
    <string name="submenu_insertar">New Product</string>
    <string name="aceptar">Accept</string>
    <string name="cancelar">Cancel</string>
    <string name="descripcion">Description</string>
    <string name="salir">Exit</string>
    <string name="salir_mensaje">The app will shutdown</string>
    <string name="insertar_item">REGISTER PRODUCT</string>
    <string name="foto_uri">URI Photo</string>
    <string name="comprar_item">BUY PRODUCT</string>
    <string name="comprar">Buy</string>
    <string name="cambiar_usuario">LOG IN</string>
    <string name="borrar_producto">DELETE PRODUCT</string>
    <string name="modificar_item">EDIT PRODUCT</string>
    <string name="password">Password</string>
    <string name="submenu_nuevo_usuario">New User</string>
    <string name="login">Login...</string>
    <string name="lista_vendedores">USERS LIST</string>
    <string name="insertar_ok">The product was registered successfully</string>
    <string name="falta_dato">Some essential data is missing</string>
    <string name="producto_borrar_ok">Product deleted successfully</string>
    <string name="login_fallo">Wrong user or password</string>
    <string name="signin_ok">User registered successfully</string>
    <string name="signin_repetido">The user already exists</string>
    <string name="comprar_ok">The product was bought successfully</string>
    <string name="modificar_ok">The product was edited successfully</string>
    <string name="dinero">Money</string>
    <string name="borrar_vendedor">DELETE USER</string>
    <string name="vendedor_borrar_ok">User deleted successfully</string>
    <string name="info_item">PRODUCT INFORMATION</string>
    <string name="cerrar_sesion">LOG OUT</string>
    <string name="usuarios">Users</string>
    <string name="no_usuario">No user</string>
    <string name="ajustes">You pressed Settings</string>
</resources>
