<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/darker_gray"
        android:background="@android:drawable/stat_sys_upload">

        <TextView
            android:id="@+id/tvInsertar_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:text="@string/insertar_item"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_foto_uri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvInsertar_item"
            android:hint="@string/foto_uri" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_foto_uri"
            android:hint="@string/nombre" />

        <EditText
            android:id="@+id/et_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_nombre"
            android:hint="@string/descripcion" />

        <EditText
            android:id="@+id/et_precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_descripcion"
            android:hint="@string/precio"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/tv_modificar_pos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_precio"
            android:visibility="invisible"
            android:inputType="numberDecimal" />

    </RelativeLayout>

</ScrollView>