<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".VendorActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/lista_vendedores"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@drawable/back2"/>

    <LinearLayout
        android:id="@+id/llLeyenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back3"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/nombre"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/password"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|end"
            android:padding="5dp"
            android:text="@string/dinero"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="5dp" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvVendedores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/margenAbajo"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@drawable/back4"
        android:orientation="horizontal"/>

</LinearLayout>