<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp">

    <TextView
        android:id="@+id/vendedor_nombre"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:text="@string/nombre"
        android:background="@drawable/back"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/vendedor_password"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:padding="5dp"
        android:gravity="center_vertical|center"
        android:text="@string/password"
        android:background="@drawable/back"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/vendedor_dinero"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:padding="5dp"
        android:gravity="center_vertical|right"
        android:text="@string/dinero"
        android:background="@drawable/back"
        android:textColor="@android:color/white"/>

    <ImageView
        android:id="@+id/item_borrar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:onClick="borrarVendor"
        android:contentDescription="@string/nombre"
        android:background="@drawable/back"
        app:srcCompat="@android:drawable/ic_menu_delete" />

</LinearLayout>