<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="@android:color/tertiary_text_dark"
            app:srcCompat="@android:drawable/ic_menu_myplaces" />

        <TextView
            android:id="@+id/usuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="3"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="@android:color/tertiary_text_dark"
            android:hint="@string/no_usuario"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="@android:color/tertiary_text_dark"
            app:srcCompat="@android:drawable/btn_star_big_off" />

        <TextView
            android:id="@+id/dinero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="@android:color/tertiary_text_dark"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="24sp"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/elementos"
        android:background="@drawable/back"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:padding="5dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:text="@string/nombre"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/vendedor"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="5dp"
            android:gravity="center_vertical|end"
            android:text="@string/precio"
            android:textSize="18sp"
            android:textColor="@android:color/white"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:padding="5dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:padding="5dp" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>